--- a/index.html
+++ b/index.html
@@ -1,70 +1,52 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>BlueJeansTest</title>
+        <title>TacoTest</title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <section class="blue-jeans-global">  
-            <div class="blue-jeans">
-                <div class="title-and-text-main">
-                    <div class="title-wtf">
-                        What the F?
-                    </div>
-                    <div class="ab-solution">
-                        The anatomy of Democracy Denim Constructed With “Ab”solution Fit Technology
-                    </div>
+        <footer class="taco-footer">
+            <div class="taco-contain">
+                <div class="fala">
+                    FalaFULL of flavor
                 </div>
-                <div class="img-jean-responsive">
-                    <img src="imgs/Group96.png" alt="">
+                <a href="#" class="button-variety">
+                    TRY THE VARIETY PACK
+                </a>
+                <div class="svg-sites">
+                    <svg class="padd-svg" width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="25" cy="25" r="25" fill="white"/>
+                        <path d="M30.5488 27.0625L31.2324 22.5703H26.8867V19.6406C26.8867 18.3711 27.4727 17.1992 29.4258 17.1992H31.4277V13.3418C31.4277 13.3418 29.6211 13 27.9121 13C24.3477 13 22.0039 15.1973 22.0039 19.1035V22.5703H18V27.0625H22.0039V38H26.8867V27.0625H30.5488Z" fill="#F47D34"/>
+                    </svg>   
+                    <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="25" cy="25" r="25" fill="white"/>
+                        <path d="M25.1543 18.3574C21.4043 18.3574 18.416 21.4043 18.416 25.0957C18.416 28.8457 21.4043 31.834 25.1543 31.834C28.8457 31.834 31.8926 28.8457 31.8926 25.0957C31.8926 21.4043 28.8457 18.3574 25.1543 18.3574ZM25.1543 29.4902C22.752 29.4902 20.7598 27.5566 20.7598 25.0957C20.7598 22.6934 22.6934 20.7598 25.1543 20.7598C27.5566 20.7598 29.4902 22.6934 29.4902 25.0957C29.4902 27.5566 27.5566 29.4902 25.1543 29.4902ZM33.709 18.123C33.709 17.2441 33.0059 16.541 32.127 16.541C31.248 16.541 30.5449 17.2441 30.5449 18.123C30.5449 19.002 31.248 19.7051 32.127 19.7051C33.0059 19.7051 33.709 19.002 33.709 18.123ZM38.1621 19.7051C38.0449 17.5957 37.5762 15.7207 36.0527 14.1973C34.5293 12.6738 32.6543 12.2051 30.5449 12.0879C28.377 11.9707 21.873 11.9707 19.7051 12.0879C17.5957 12.2051 15.7793 12.6738 14.1973 14.1973C12.6738 15.7207 12.2051 17.5957 12.0879 19.7051C11.9707 21.873 11.9707 28.377 12.0879 30.5449C12.2051 32.6543 12.6738 34.4707 14.1973 36.0527C15.7793 37.5762 17.5957 38.0449 19.7051 38.1621C21.873 38.2793 28.377 38.2793 30.5449 38.1621C32.6543 38.0449 34.5293 37.5762 36.0527 36.0527C37.5762 34.4707 38.0449 32.6543 38.1621 30.5449C38.2793 28.377 38.2793 21.873 38.1621 19.7051ZM35.3496 32.8301C34.9395 34.002 34.002 34.8809 32.8887 35.3496C31.1309 36.0527 27.0293 35.877 25.1543 35.877C23.2207 35.877 19.1191 36.0527 17.4199 35.3496C16.248 34.8809 15.3691 34.002 14.9004 32.8301C14.1973 31.1309 14.373 27.0293 14.373 25.0957C14.373 23.2207 14.1973 19.1191 14.9004 17.3613C15.3691 16.248 16.248 15.3691 17.4199 14.9004C19.1191 14.1973 23.2207 14.373 25.1543 14.373C27.0293 14.373 31.1309 14.1973 32.8887 14.9004C34.002 15.3105 34.8809 16.248 35.3496 17.3613C36.0527 19.1191 35.877 23.2207 35.877 25.0957C35.877 27.0293 36.0527 31.1309 35.3496 32.8301Z" fill="#F47D34"/>
+                    </svg>                                             
                 </div>
-                <div class="display-jean">
-                    <div class="text-left">
-                        <div class="function-left">
-                            <div class="function"> <span>01</span> Function</div>
-                            <div class="function-text">
-                                Function refers to the upper block of the jean – the area from your waist to your hips. This determines your size.
-                                Examples: Mid-rise, High-rise, Skyrise, etc.
-                            </div>
-                            <a href="#" class="explore-function-left">EXPLORE FUNCTION</a>
-                        </div>
-                        <div class="fashion-left">
-                            <div class="fashion"> <span>02</span> Fashion</div>
-                            <div class="fashion-text">
-                                Fashion refers to the leg shape.
-                                Examples: Skinny, Boot Cut, Straight Leg, Fray Hem, Flare, Etc.
-                            </div>
-                            <a href="#" class="explore-fashion-left">EXPLORE FASHION</a>
-                        </div>
-                    </div>
-                    <div class="img-jeans">
-                        <img src="imgs/(transparent) B1560 UPDATED GP 1.png" alt="">
-                    </div>
-                    <div class="text-rigth">
-                        <div class="features-rigth">
-                            <div class="features"> <span>03</span> Features</div>
-                            <div class="features-text">
-                                Features refer to the details that are part
-                                of the construction of the jean
-                                that add distinct personality and character to each style.
-                                Examples: Belt Loops, Pockets, Hem Details, Darts, Back Yoke, etc.
-                            </div>
-                            <a href="#" class="explore-features-rigth">EXPLORE FUNCTION</a>
-                        </div>
-                        <div class="finish-rigth">
-                            <div class="finish"> <span>04</span> Finish</div>
-                            <div class="finish-text">
-                                Finish refers to the components that contribute to the look and feel of a style.
-                                Examples: Wash, Thread Color, Hardware, Destruction, etc.
-                            </div>
-                            <a href="#" class="explore-finish-rigth">EXPLORE FINISHES</a>
-                        </div>
-                    </div>
+                <div class="navigation">
+                    <a href="#">HOME</a>
+                    <a href="#">OUR STORY</a>
+                    <a href="#">SHOP</a>
+                    <a href="#" class="padd-none">CONTACT</a>
+                </div>
+                <div class="reserved">
+                    ©2022 TaDah Foods All rights reserved.
+                </div>
+                <div class="taco-positions">
+                    <img src="imgs/Left_Image.png" alt="">
+                    <img src="imgs/Right_Image.png" alt="">
+                </div>
+                <div class="other-positions">
+                    <img src="imgs/chickpeas_bg 1.png" alt="">
+                </div>
+                <div class="other-img-position">
+                    <img src="imgs/tadah_logo 1.png" alt="">
                 </div>
             </div>
-        </section>
+        </footer>
     </body>
 </html>
